# rust-axum-askama-htmx-todoapp

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20240510123228_initial_migration.down.sql  20240510123228_initial_migration.up.sql
src/: config.rs  db.rs  main.rs  model.rs  route.rs  serialization.rs  service.rs
src/handler/: auth_handler.rs  middleware.rs  mod.rs  todo_handler.rs
tailwind/: base.css  package-lock.json  package.json  tailwind.config.js
templates/auth/: home.html  login.html  register.html
templates/error/: error_400.html  error_401.html  error_404.html  error_500.html
templates/layout/: base.html
templates/partials/: footer.html  messages.html  navbar.html  todo_creation_modal.html  todo_item_list.html  todo_update_modal.html
templates/todos/: todo_list.html
