[package]
name = "rust-axum-askama-htmx"
authors = ["emarifer <enriquemarin_sierra@hotmail.com>"]
description = "Rust/Axum+Askama+Htmx: Full stack application using Rust's Axum framework & Askama templating language with user auth management (JWT) + CRUD to a SQLite database (To Do List) and HTMX in the frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
argon2 = "0.5.3"
askama = "0.12.1"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-messages = "0.6.1"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-sessions = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
